Upgrading Webpack and Swiper. Added some content spacing. Added media support. Fixing deprecated warning.

--- a/.dev/scss/module.scss
+++ b/.dev/scss/module.scss
@@ -11,4 +11,8 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
+
+    img {
+        object-fit: cover;
+    }
 }
