--- a/.dev/scss/theme.scss
+++ b/.dev/scss/theme.scss
@@ -8,7 +8,6 @@
  */
 .modbpslider {
     .modbpslider-padding {
-        padding: 20px;
         background: rgba(0, 0, 0, .5);
 
         .title {
